0.6.0
  * Changed how time serialization is done to preserve TimeWithZone when appropriate.
    Backward compatibility is intact, but bumping the minor version for the YAML format change.