@@ -1,3 +1,4 @@
 0.6.0
-  * Changed how time serialization is done to preserve TimeWithZone when appropriate.
+  * [#8] Changed how time serialization is done to preserve TimeWithZone when appropriate.
     Backward compatibility is intact, but bumping the minor version for the YAML format change.
+  * [#11] Fixed next occurrence to work on never-ending schedules
